<resources>
    <string name="app_name">MyVideoteca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_blueray">Blue Ray</string>
    <string name="menu_dvd">DVD</string>
    <string name="menu_cd">CD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_admin">Admin Menu</string>
    <string name="insertbrdvd">Inserisci i dati</string>
    <string name="insertcd">Inserisci CD\n</string>
    <string name="editItem">Modifica Elementi</string>
    <string name="removeItem">Rimuovi Elemento</string>
    <string name="menu_book">Prenotazioni</string>
</resources>