<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_blueray">

    <fragment
        android:id="@+id/nav_blueray"
        android:name="com.uninsubria.myvideoteca.ui.blueray.BlueRayFragment"
        android:label="@string/menu_blueray"
        tools:layout="@layout/fragment_blueray" />

    <fragment
        android:id="@+id/nav_dvd"
        android:name="com.uninsubria.myvideoteca.ui.dvd.DVDFragment"
        android:label="@string/menu_dvd"
        tools:layout="@layout/fragment_dvd" />

    <fragment
        android:id="@+id/nav_cd"
        android:name="com.uninsubria.myvideoteca.ui.cd.CDFragment"
        android:label="@string/menu_cd"
        tools:layout="@layout/fragment_cd" />

    <fragment
        android:id="@+id/adminOptionsFragment"
        android:name="com.uninsubria.myvideoteca.ui.admin.AdminOptionsFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin_options" />

    <fragment
        android:id="@+id/insertBRDVDFragment"
        android:windowSoftInputMode="adjustNothing"
        android:name="com.uninsubria.myvideoteca.ui.admin.InsertBRDVDFragment"
        android:label="@string/insertbrdvd"
        tools:layout="@layout/fragment_insert_brdvd" />

    <fragment
        android:id="@+id/insertCDFragment"
        android:windowSoftInputMode="adjustResize"
        android:name="com.uninsubria.myvideoteca.ui.admin.InsertCDFragment"
        android:label="@string/insertcd"
        tools:layout="@layout/fragment_insert_cd" />

    <fragment
        android:id="@+id/editFragment"
        android:windowSoftInputMode="adjustResize"
        android:name="com.uninsubria.myvideoteca.ui.admin.EditFragment"
        android:label="@string/editItem"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/removeFragment"
        android:windowSoftInputMode="adjustResize"
        android:name="com.uninsubria.myvideoteca.ui.admin.RemoveFragment"
        android:label="@string/removeItem"
        tools:layout="@layout/fragment_remove" />
</navigation>