<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_blueray"
            android:icon="@drawable/ic_menu_blueray"
            android:title="@string/menu_blueray" />
        <item
            android:id="@+id/nav_dvd"
            android:icon="@drawable/ic_menu_dvd"
            android:title="@string/menu_dvd" />
        <item
            android:id="@+id/nav_cd"
            android:icon="@drawable/ic_menu_cd"
            android:title="@string/menu_cd" />
        <!-- Aggiungi qui il separatore -->
        <item
            android:id="@+id/nav_separator"
            android:title=""
            android:icon="@drawable/menu_separator"
            android:enabled="false"
            android:checkable="false"
            />
        <item
            android:id="@+id/nav_book"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_book" />
    </group>
</menu>